# knx-telegram-store

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: design_and_implementation.md
src/knx_telegram_store/: __init__.py  buffered.py  lookup.py  model.py  query.py  store.py
src/knx_telegram_store/backends/: base_sql.py  memory.py  postgres.py  sqlite.py
tests/: conftest.py  test_buffered_store.py  test_generic_store.py  test_lookup_cache.py  test_lookup_migration.py  test_memory_backend.py  test_sqlite_debug.py
tools/: migrate_sample_db.py
