[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "knx-telegram-store"
version = "0.1.0"
description = "A standalone, host-agnostic Python library for KNX telegram persistence."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Martin Hoefling"}
]
keywords = ["knx", "home-assistant", "persistence", "storage", "telegram"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Framework :: AsyncIO",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/XKNX/knx-telegram-store"
Bug-Tracker = "https://github.com/XKNX/knx-telegram-store/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["knx_telegram_store*"]

[tool.setuptools.package-data]
knx_telegram_store = ["py.typed"]

[project.optional-dependencies]
sqlite = ["aiosqlite>=0.20", "sqlalchemy[asyncio]>=2.0"]
postgres = ["asyncpg>=0.29", "sqlalchemy[asyncio]>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.9",
    "aiosqlite>=0.20"
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "U", "UP"]
ignore = [
    "E501", # Line too long
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
